[metadata]
setup_requires =
    wheel
description_file = README.md

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = kernl
known_third_party =
    triton
    torch
    functorch
    torchdynamo
    transformers
    onnxruntime
    onnx
    nvidia-pyindex
    tensorrt
    numpy
    pytest
    termcolor

line_length = 120
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True
py_version=39
known_local_folder=kernl

[flake8]
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
